syntax = "proto3";
package ccmsg;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/empty.proto";

// ------------------------
// FaucetClient<->FaucetServer protocol
// ------------------------

service Faucet {
    rpc GetCoins(GetCoinsRequest) returns (google.protobuf.Empty) {}
}

message GetCoinsRequest {
    string address = 1;
}
